--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,44 @@ p {
 }
 
 /***** Utilities *****/
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 2rem;
+    overflow: hidden;
+}
+
+.text-center {
+    text-align: center;
+}
+
 .text-primary {
     color: #93cb52;
 }
 
+.bg-light {
+    background: #f4f4f4;
+    color: #333;
+}
+
+.bg-dark {
+    background: #333;
+    color: #fff;
+}
+
+.bg-primary {
+    background: #93cb52;
+    color: #fff;
+}
+
 .l-heading {
     font-size: 4rem;
+    margin-bottom: .75rem;
+    line-height: 1.1;
+}
+
+.m-heading {
+    font-size: 2rem;
     margin-bottom: .75rem;
     line-height: 1.1;
 }
@@ -52,6 +84,25 @@ p {
     background: #333;
     color: #fff;
 }
+
+.py-1 { padding: 1.5rem 0; }
+.py-1 { padding: 2rem 0; }
+.py-1 { padding: 3rem 0; }
+
+.p-1 { padding: 1.5rem; }
+.p-2 { padding: 2rem; }
+.p-3 { padding: 3rem; }
+
+.list {
+    margin: .5rem 0;
+    list-style: none;
+}
+
+.list li {
+    padding: .5rem 0;
+    border-bottom: 1px dotted #444;
+}
+
 /***** Navbar *****/
 #navbar {
     display: flex;
@@ -99,5 +150,169 @@ p {
     align-items: center;
     height: 100%;
     padding: 0 2rem;
+    /* Overlay */
+    position: absolute;
+    top: 65px;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, .4);
+}
+
+/***** Section: what we do *****/
+#what .items {
+    display: flex;
+    padding: 1rem;
+}
+
+#what .items .item {
+    flex: 1;
+    text-align: center;
+    padding: 1rem;
+}
+
+#what .items .item i {
+    background: #93cb52;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
+
+/***** Section: who we are *****/
+#who {
+    display: flex;
+}
+
+#who div {
+    flex: 1;
+}
+
+#who .who-img {
+    background: url('../img/people.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+/***** Section:: clients *****/
+#clients .items {
+    display: flex;
+}
+
+#clients .items img {
+    display: block;
+    margin: auto;
+    width: 60%;
+}
+
+/***** Section:: contact *****/
+#contact {
+    display: flex;
+}
+
+#contact .map, #contact .contact-form {
+    flex: 1;
+}
+
+#contact .contact-form .form-group {
+    margin: .75rem;
+}
+
+#contact .contact-form label {
+    display: block;
+}
+#contact .contact-form input,
+#contact .contact-form textarea {
+    width: 100%;
+    padding: .5rem;
+}
+
+
+/* Responsive*/
+
+/* Widescreen */
+@media screen and (min-width: 1100px) {
+    /* Align icon to left */
+    #what .items .item {
+        display: flex;
+        text-align: left;
+    }
+
+    /* Position icon */
+    #what .items .item i {
+        margin-right: 1.3rem;
+        align-self: center;
+        margin-bottom: 0;
+    }
+
+    #contact .map {
+        flex: 2;
+    }
+}
+
+/* Mobile */
+@media screen and (max-width: 768px) {
+    #what .items {
+        display: block;
+        padding: 1rem;
+    }
+    
+    /* Align icon to left */
+    #what .items .item {
+        display: flex;
+        text-align: left;
+    }
+    
+    /* Position icon */
+    #what .items .item i {
+        margin-right: 1.3rem;
+        align-self: center;
+        margin-bottom: 0;
+    }
+}
+
+/* Smartphones */
+@media (max-width: 500px) {
+    #navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #navbar .logo {
+        margin-bottom: .5rem;
+        text-align: center;
+    }
+
+    #navbar ul {
+        padding: .5rem;
+    }
+
+    #intro .intro-content {
+        top: 110px;
+    }
+
+    #who {
+        display: block;
+    }
+
+    #who .who-img {
+        display: none;
+    }
+
+    #clients .items img {
+        width: 80%;
+    }
+
+    #clients .items div:last-child {
+        display: none;
+    }
+
+    #contact {
+        flex-direction: column;
+    }
+
+    #contact .map {
+        height: 200px;
+        border-top: 4px solid #333;
+    }
 }
